// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridPokemon renders correctly while loading 1`] = `
<div>
  <div
    data-testid="grid-loading"
  >
    Loading...
  </div>
</div>
`;

exports[`GridPokemon renders correctly with data 1`] = `
<div>
  <div
    class="MuiBox-root emotion-0"
    data-testid="grid-pokemon"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 emotion-1"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-0"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/0.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-0
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-1"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-1
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-2"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/2.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-2
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-3"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/3.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-3
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-4"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/4.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-4
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-5"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/5.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-5
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-6"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/6.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-6
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-7"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/7.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-7
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-8"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/8.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-8
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-9"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/9.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-9
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-10"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/10.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-10
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-11"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/11.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-11
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-12"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/12.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-12
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-13"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/13.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-13
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-14"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/14.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-14
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-15"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/15.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-15
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-16"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/16.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-16
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-17"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/17.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-17
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-18"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/18.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-18
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 emotion-2"
      >
        <div
          class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters emotion-3"
          role="button"
          tabindex="0"
        >
          <img
            alt="pokemon-19"
            height="120px"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/19.png"
            style="object-fit: contain;"
            width="120px"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
          >
            pokemon-19
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root emotion-62"
    >
      <nav
        aria-label="pagination navigation"
        class="MuiPagination-root MuiPagination-text emotion-63"
      >
        <ul
          class="MuiPagination-ul emotion-64"
        >
          <li>
            <button
              aria-label="Go to previous page"
              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-previousNext emotion-65"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon emotion-66"
                data-testid="NavigateBeforeIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              aria-current="true"
              aria-label="page 1"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-selected MuiPaginationItem-page emotion-65"
              tabindex="0"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <button
              aria-label="Go to page 2"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page emotion-65"
              tabindex="0"
              type="button"
            >
              2
            </button>
          </li>
          <li>
            <button
              aria-label="Go to page 3"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page emotion-65"
              tabindex="0"
              type="button"
            >
              3
            </button>
          </li>
          <li>
            <button
              aria-label="Go to page 4"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page emotion-65"
              tabindex="0"
              type="button"
            >
              4
            </button>
          </li>
          <li>
            <button
              aria-label="Go to page 5"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page emotion-65"
              tabindex="0"
              type="button"
            >
              5
            </button>
          </li>
          <li>
            <button
              aria-label="Go to next page"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-previousNext emotion-65"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon emotion-66"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`GridPokemon renders correctly with invalid data 1`] = `
<div>
  <div
    data-testid="grid-error"
  >
    Pokemon unavailable.
  </div>
</div>
`;
